# ansible-crashed-lab

./: .gitignore  Pipfile  README.md  deploy_nginx.yml  pyproject.toml
Control-node/: Dockerfile.Control-node  build-image.sh  docker-compose-down.sh  docker-compose-up.sh  docker-compose.yaml  docker-exec.sh
groups/: all.yml
inventory/: inventory.ini  inventory.yml
roles/nginx/tasks/: main.yml
roles/nginx/templates/: nginx_virtual_host.j2
roles/nginx/vars/: main.yml
roles/ssh/tasks/: ssh.yml
scripts/: ansible-run.sh  iptables-sample.sh  logs.sh  setup.sh
src/: inventory  inventory.ini  inventory.yaml  playbook.yml
src/roles/ansible-role-libvirt-kvm/: main.yml
